--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "framer-motion": "^11.11.8",
     "next": "14.2.15",
+    "npm": "^11.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
